Version 1.3.28 + new build setup